--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ appcompat = "1.7.1"
 material = "1.13.0"
 activity = "1.12.1"
 constraintlayout = "2.2.1"
-flutter_remote_module = "1.0"
+flutter_remote_module = "1.0.1"
 flutter_local_module = "1.0"
 
 [libraries]
@@ -24,8 +24,8 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 flutter_remote_debug = { module = "com.example.flutter_module:flutter_debug", version.ref = "flutter_remote_module" }
 flutter_remote_release = { module = "com.example.flutter_module:flutter_release", version.ref = "flutter_remote_module" }
 
-flutter_local_debug = { module = "com.example.poc_flutternative:flutter_debug", version.ref = "flutter_local_module" }
-flutter_local_release = { module = "com.example.poc_flutternative:flutter_release", version.ref = "flutter_local_module" }
+flutter_local_debug = { module = "com.example.flutter_module:flutter_debug", version.ref = "flutter_local_module" }
+flutter_local_release = { module = "com.example.flutter_module:flutter_release", version.ref = "flutter_local_module" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
